test/importers/invalid/skip_message_reserved_column_name_importer.rb
require 'csv_party'

class SkipMessageReservedColumnNameImporter < CSVParty::Importer
  column :skip_message
end
